public/css/style.css
/* ... */
.enquires-wrapper {
  grid-column: 9 / 12;
  display: flex;
  flex-direction: column;
  gap: calc(20 / 16 * 1rem);
}

.enquires-wrapper .enquires-wrapper_heading {
  color: var(--fc-white-100);
}

.enquires-wrapper .nav-list {
  display: flex;
  flex-wrap: wrap;
}

.enquires-wrapper .nav-list_item {
  list-style: none;
}

.enquires-wrapper .nav-list_item:nth-child(1) {
  flex: 1 1 100%;
}

.enquires-wrapper .nav-list_item:nth-child(3) {
  margin-left: .25rem;
}

.enquires-wrapper .nav-list_item .nav-item_link {
  text-decoration: none;
  position: relative;
  line-height: .9;
  display: inline-block;
  color: var(--fc-white-100);
}

.info-button {
  height: fit-content;
  margin: 0 0 0 auto;
  width: fit-content;
  background-color: transparent;
  cursor: pointer;
  border: none;
  position: relative;
  transition: transform .2s ease-out;

  grid-column: -1 / -3;
  position: fixed;
  right: var(--gutter-width);
  top: var(--gutter-width);
  z-index: 3;
  pointer-events: all !important;
}

.nav-item_link::before,
.info-button::before,
.project-link::before,
.c-header_container .header-link::before {
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  background-color: hsla(165, 100%, 50%, 0.527);
  left: 0;
  top: 0;
  transform: scaleX(0);
  transform-origin: right;
  transition: transform var(--animation-primary);
  z-index: -1;
  will-change: transform;
  pointer-events: none;
}

.nav-item_link:hover::before,
.info-button:hover::before,
.project-link:hover::before,
.c-header_container .header-link:hover::before {
  transform: scaleX(1);
  transform-origin: left;
}

.gmt-time {
  position: relative;
  line-height: 1;
  display: flex;
  align-items: flex-start;
  gap: 1rem;
  text-wrap: nowrap;
}

.gmt-time .time-timezone {
  line-height: 1;
  text-transform: uppercase;
  color: var(--fc-white-100);
}

.gmt-time .time,
.gmt-time .time span {
  line-height: .7;
  color: var(--fc-white-100);
}

.ticker {
  animation: blink .9s infinite;
  animation-timing-function: steps(2, jump-start);
}

@keyframes blink {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

/* Contact container */
.c-contact {
  position: fixed;
  bottom: 0;
  width: fit-content;
  padding: 0 var(--gutter-width) var(--gutter-width);
  background-color: rgba(255, 255, 255, 0.001);
  mix-blend-mode: difference;
  z-index: 3;
}

.c-contact_container {
  display: flex;
  gap: var(--gutter-width);
}

.menu,
.send-message {
  border: none;
  text-align: left;
  padding: 12px 1rem;
  background-color: var(--fc-grey-300);
  color: var(--fc-white-100);
  backdrop-filter: blur(10px);
  text-decoration: none;
  cursor: pointer;
  text-wrap: nowrap;
  border-radius: 2px;
  transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1), color 1s cubic-bezier(0.075, 0.82, 0.165, 1), transform .2s ease-out;
}

.send-message {
  width: calc(2.125 * var(--column-width));
}

.menu:hover,
.send-message:hover,
.menu:focus-visible,
.send-message:focus-visible {
  background-color: var(--fc-white-100);
  color: black;
  outline: none;
}

.c-contact_container .menu {
  display: none;
}

/* Main section */
.c-main {
  width: 100vw;
  min-height: 100svh;
  background-color: var(--fc-black-100);
  padding-top: calc(280 / 16 * 1rem);
  position: relative;
  z-index: 2;
  overflow-y: clip;
}

.main-heading_wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
  padding-inline: var(--gutter-width);
  padding-bottom: calc(74 / 16 * 1rem);
  background-color: var(--fc-black-100);
}

.c-main_container {
  position: relative;
}

/* Information Modal */
.c-main .modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100svh;
  background-color: #020202;
  z-index: 10;
  padding: var(--gutter-width);
  transition: opacity .5 ease-out;
  opacity: 0;
  pointer-events: none
}

.modal.active {
  pointer-events: all;
}

.modal .modal-content {
  width: 100%;
  height: 100%;
  position: relative;
}

.modal-header {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
  position: relative;
  z-index: 4;
}

.modal-header .modal-heading {
  grid-column: span 5 / span 5;
  line-height: 1.6;
}

.modal .modal-heading,
.modal .modal-heading span {
  font-size: clamp(0.875rem, 0.8421rem + 0.1754vw, 1rem);
  color: var(--fc-white-100);
  letter-spacing: 0.01em;
}

.modal-footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  flex-wrap: wrap;
  gap: 1rem;
}

.modal-footer .send-message {
  background-color: var(--fc-grey-200);
}

.modal-footer .left-content {
  display: flex;
  gap: 2px;
  align-items: flex-end;
  flex-wrap: wrap;
}

.left-content .services {
  display: flex;
  flex-direction: column;
  gap: calc(28/16 * 1rem);
  width: calc(216 / 16 * 1rem);
}

.services .services-heading {
  width: 100%;
}

.services .services-heading,
.right-content p {
  cursor: auto;
  pointer-events: none;
}

.right-content p {
  width: fit-content;
}

.left-content .services .services-list_item {
  list-style: none;
  color: var(--fc-white-100);
}

.left-content .services .services-list {
  display: flex;
  flex-direction: column;
  gap: .5rem;
}

.modal-content .modal-body {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.modal-body img {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 50%;
  height: 50%;
  object-fit: cover;
  z-index: -1;
  pointer-events: none;
}

/* Main content for the main section */
.main-heading {
  grid-column: 5 / 12;
  display: flex;
  flex-direction: column;
  gap: .35rem;
}

.c-main_container .projects {
  background-color: var(--fc-black-100);
}

.projects-item {
  height: 100vh;
  position: relative;
  width: 100%;
  padding-top: calc(36 / 16 * 1rem);
  overflow: clip;
}
/* ... */

